[package]
name = "tagimg"
version = "0.1.0"
authors = ["Lane Kolbly <lane@rscheme.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "*"
rocket_contrib = { version = "0.4", features = [ "tera_templates" ] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rand = "0.7.3"
clap = "2.33.3"
